Project

General

Profile

Actions

Bug #59738

open

lua code refactoring - better infinite loop detection

Added by Yuval Lifshitz 12 months ago. Updated 8 months ago.

Status:
Pending Backport
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
lua backport_processed
Backport:
reef, quinc
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

the stateless iterator should skip elelemnts with the same key

Actions #1

Updated by Yuval Lifshitz 12 months ago

  • Subject changed from lua gets into an infinite loop when iterating over multimap to lua code refactoring - better infinite loop detection
  • Status changed from New to Rejected
  • Backport changed from reef, quincy to reef, quinc

already fixed in a different tracker

Actions #2

Updated by Yuval Lifshitz 12 months ago

  • Status changed from Rejected to New

original fix in commit: 270d1117bbf97ab79b497d750d960247b8700eb8
only cover the multimap case where the key is an empty string

Actions #3

Updated by Yuval Lifshitz 12 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 51472
Actions #4

Updated by Yuval Lifshitz 8 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot 8 months ago

  • Tags changed from lua to lua backport_processed
Actions

Also available in: Atom PDF