rgw/lua: use an iterator to avoid infinite loops in case of multimap

also:
* unification of the iteration function for different map types
* it gived better performance that iteration via lookups
* iterator invalidations is handled when deleting an entry during
  iterations

Fixes: https://tracker.ceph.com/issues/59738

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>