src/rgw/rgw_lua_utils.h
@@ -1,5 +1,7 @@
 #pragma once
 
+#include <type_traits>
+#include <variant>
 #include <string.h>
 #include <memory>
 #include <map>
@@ -10,6 +12,13 @@
 
 #include "include/common_fwd.h"
 #include "rgw_perf_counters.h"
+
+// a helper type traits structs for detecting std::variant
+template<class>
+struct is_variant : std::false_type {};
+template<class... Ts> 
+struct is_variant<std::variant<Ts...>> : 
+    std::true_type {};
 
 namespace rgw::lua {
 
@@ -24,12 +33,28 @@ void pushtime(lua_State* L, const CephTime& tp)
   lua_pushstring(L, buff);
 }
 
-static inline void pushstring(lua_State* L, std::string_view str)
+inline void pushstring(lua_State* L, std::string_view str)
 {
   lua_pushlstring(L, str.data(), str.size());
 }
 
-static inline void unsetglobal(lua_State* L, const char* name) 
+inline void pushvalue(lua_State* L, const std::string& value) {
+  pushstring(L, value);
+}
+
+inline void pushvalue(lua_State* L, long long value) {
+  lua_pushinteger(L, value);
+}
+
+inline void pushvalue(lua_State* L, double value) {
+  lua_pushnumber(L, value);
+}
+
+inline void pushvalue(lua_State* L, bool value) {
+  lua_pushboolean(L, value);
+}
+
+inline void unsetglobal(lua_State* L, const char* name) 
 {
   lua_pushnil(L);
   lua_setglobal(L, name);
@@ -212,8 +237,8 @@ struct EmptyMetaTable {
 void create_debug_action(lua_State* L, CephContext* cct);
 
 // set the packages search path according to:
-// package.path = "<install_dir>/share/lua/5.3/?.lua"                                                                         │                         LuaRocks.
-// package.cpath= "<install_dir>/lib/lua/5.3/?.so"
+// package.path  = "<install_dir>/share/lua/5.3/?.lua"
+// package.cpath = "<install_dir>/lib/lua/5.3/?.so"
 void set_package_path(lua_State* L, const std::string& install_dir);
 
 // open standard lua libs and remove the following functions:
@@ -227,9 +252,69 @@ void open_standard_libs(lua_State* L);
 
 typedef int MetaTableClosure(lua_State* L);
 
+// copy the input iterator into a new iterator with memory allocated as userdata
+// - allow for string conversion of the iterator (into its key)
+// - storing the iterator in the metadata table to be used for iterator invalidation handling
+template<typename MapType>
+typename MapType::iterator* create_iterator_metadata(lua_State* L, const typename MapType::iterator& it) {
+  using Iterator = typename MapType::iterator;
+  auto iter_buff = lua_newuserdata(L, sizeof(Iterator));
+  const auto userdata_pos = lua_gettop(L);
+  // create metatable for userdata
+  [[maybe_unused]] const auto rc = luaL_newmetatable(L, typeid(typename MapType::key_type).name());
+  const auto metatable_pos = lua_gettop(L);
+  auto new_it = new (iter_buff) Iterator(it);
+  // store the iterator pointer in the metatable
+  lua_pushliteral(L, "__iterator");
+  lua_pushlightuserdata(L, new_it);
+  lua_rawset(L, metatable_pos); 
+  // add "tostring" closure to metatable
+  lua_pushliteral(L, "__tostring");
+  lua_pushlightuserdata(L, new_it);
+  lua_pushcclosure(L, [](lua_State* L) {
+      // the key of the table is expected to be convertible to char*
+      using Iterator = typename MapType::iterator;
+      static_assert(std::is_constructible<typename MapType::key_type, const char*>());
+      auto iter = reinterpret_cast<Iterator*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
+      ceph_assert(iter);
+      pushstring(L, (*iter)->first);
+      return ONE_RETURNVAL;
+    }, ONE_UPVAL);
+  lua_rawset(L, metatable_pos);
+  // tie userdata and metatable
+  lua_setmetatable(L, userdata_pos);
+  return new_it;
+}
+
+template<typename MapType>
+void update_erased_iterator(lua_State* L, const typename MapType::iterator& old_it, const typename MapType::iterator& new_it) {
+  // a metatable exists for the iterator
+  if (luaL_getmetatable(L, typeid(typename MapType::key_type).name()) != LUA_TNIL) {
+    const auto metatable_pos = lua_gettop(L);
+    lua_pushliteral(L, "__iterator");
+    if (lua_rawget(L, metatable_pos) != LUA_TNIL) {
+      // an iterator was stored
+      auto stored_it = reinterpret_cast<typename MapType::iterator*>(lua_touserdata(L, -1));
+      ceph_assert(stored_it);
+      if (old_it == *stored_it) {
+        // changed the stored iterator to the iteator
+        *stored_it = new_it;
+      }
+    }
+  }
+}
+
+// __newindex implementation for any map type holding strings
+// or other types constructable from "char*"
+// this function allow deletion of an entry by setting "nil" to the entry
+// it also limits the size of the entry: key + value cannot exceed MAX_LUA_VALUE_SIZE
+// and limits the number of entries in the map, to not exceed MAX_LUA_KEY_ENTRIES
 template<typename MapType=std::map<std::string, std::string>>
 int StringMapWriteableNewIndex(lua_State* L) {
+  static_assert(std::is_constructible<typename MapType::key_type, const char*>());
+  static_assert(std::is_constructible<typename MapType::mapped_type, const char*>());
   const auto map = reinterpret_cast<MapType*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
+  ceph_assert(map);
 
   const char* index = luaL_checkstring(L, 2);
 
@@ -244,10 +329,64 @@ int StringMapWriteableNewIndex(lua_State* L) {
       map->insert_or_assign(index, value);
     }
   } else {
-    map->erase(std::string(index));
+    // erase the element. since in lua: "t[index] = nil" is removing the entry at "t[index]"
+    if (const auto it = map->find(index); it != map->end()) {
+      // index was found
+      update_erased_iterator<MapType>(L, it, map->erase(it));
+    }
   }
 
   return NO_RETURNVAL;
+}
+
+// implements the lua next() function for iterating over a table
+// first argument is a table and the second argument is an index in this table
+// returns the next index of the table and its associated value
+// when input index is nil, the function returns the initial value and index
+// when the it reaches the last entry of the table it return nil as the index and value
+template<typename MapType, typename ValueMetaType=void>
+int next(lua_State* L) {
+  using Iterator = typename MapType::iterator;
+  auto map = reinterpret_cast<MapType*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
+  ceph_assert(map);
+  Iterator* next_it = nullptr;
+
+  if (lua_isnil(L, 2)) {
+    // pop the 2 nils
+    lua_pop(L, 2);
+    // create userdata
+    next_it = create_iterator_metadata<MapType>(L, map->begin());
+  } else {
+    next_it = reinterpret_cast<Iterator*>(lua_touserdata(L, 2));
+    ceph_assert(next_it);
+    *next_it = std::next(*next_it);
+  }
+
+  if (*next_it == map->end()) {
+    // index of the last element was provided
+    lua_pushnil(L);
+    lua_pushnil(L);
+    return TWO_RETURNVALS;
+    // return nil, nil
+  }
+
+  // key (userdata iterator) is already on the stack
+  // push the value
+	using ValueType = typename MapType::mapped_type;
+	auto& value = (*next_it)->second;
+  if constexpr(std::is_constructible<std::string, ValueType>()) {
+      // as an std::string
+      pushstring(L, value);
+  } else if constexpr(is_variant<ValueType>()) {
+    // as an std::variant
+    std::visit([L](auto&& value) { pushvalue(L, value); }, value);
+  } else {
+    // as a metatable
+    create_metatable<ValueMetaType>(L, false, &(value));
+  }
+  // return key, value
+    
+  return TWO_RETURNVALS;
 }
 
 template<typename MapType=std::map<std::string, std::string>,
@@ -259,6 +398,7 @@ struct StringMapMetaTable : public EmptyMetaTable {
 
   static int IndexClosure(lua_State* L) {
     const auto map = reinterpret_cast<MapType*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
+    ceph_assert(map);
 
     const char* index = luaL_checkstring(L, 2);
 
@@ -266,7 +406,7 @@ struct StringMapMetaTable : public EmptyMetaTable {
     if (it == map->end()) {
       lua_pushnil(L);
     } else {
-        pushstring(L, it->second);
+      pushstring(L, it->second);
     }
     return ONE_RETURNVAL;
   }
@@ -279,40 +419,13 @@ struct StringMapMetaTable : public EmptyMetaTable {
     auto map = reinterpret_cast<MapType*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
     ceph_assert(map);
     lua_pushlightuserdata(L, map);
-    lua_pushcclosure(L, stateless_iter, ONE_UPVAL); // push the stateless iterator function
-    lua_pushnil(L);                                 // indicate this is the first call
-    // return stateless_iter, nil
+    lua_pushcclosure(L, next<MapType>, ONE_UPVAL); // push the "next()" function
+    lua_pushnil(L);                                // indicate this is the first call
+    // return next, nil
 
     return TWO_RETURNVALS;
   }
   
-  static int stateless_iter(lua_State* L) {
-    // based on: http://lua-users.org/wiki/GeneralizedPairsAndIpairs
-    auto map = reinterpret_cast<MapType*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
-    typename MapType::const_iterator next_it;
-    if (lua_isnil(L, -1)) {
-      next_it = map->begin();
-    } else {
-      const char* index = luaL_checkstring(L, 2);
-      const auto it = map->find(std::string(index));
-      ceph_assert(it != map->end());
-      next_it = std::next(it);
-    }
-
-    if (next_it == map->end()) {
-      // index of the last element was provided
-      lua_pushnil(L);
-      lua_pushnil(L);
-      // return nil, nil
-    } else {
-      pushstring(L, next_it->first);
-      pushstring(L, next_it->second);
-      // return key, value
-    }
-
-    return TWO_RETURNVALS;
-  }
-
   static int LenClosure(lua_State* L) {
     const auto map = reinterpret_cast<MapType*>(lua_touserdata(L, lua_upvalueindex(FIRST_UPVAL)));
 
